--- a/src/assets/styles/variables/index.scss
+++ b/src/assets/styles/variables/index.scss
@@ -15,3 +15,4 @@
 @import "../../../components/BadgeList/index.scss";
 @import "../../../components/Welcome/index.scss";
 @import "../../../components/Terminal/index.scss";
+@import "../../../components/MagicalBorders/index.scss";
