Update style (Welcome)

--- a/src/components/Welcome/index.scss
+++ b/src/components/Welcome/index.scss
@@ -58,6 +58,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    display: inline-flex;
     flex-shrink: 0;
     color: inherit;
     height: 48px;
