Add `AppName`, `AppNameList` components

--- a/src/assets/styles/variables/index.scss
+++ b/src/assets/styles/variables/index.scss
@@ -16,3 +16,5 @@
 @import "../../../components/Welcome/index.scss";
 @import "../../../components/Terminal/index.scss";
 @import "../../../components/MagicalBorders/index.scss";
+@import "../../../components/AppName/index.scss";
+@import "../../../components/AppNameList/index.scss";
