Update scrollbar style

--- a/src/App.scss
+++ b/src/App.scss
@@ -64,6 +64,28 @@
   }
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(83, 83, 83, 0.25);
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(83, 83, 83, 0.25);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(109, 108, 108, 0.25);
+}
+
 @media (max-width: 1200px) {
   .welcome {
     display: flex;
