--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -67,8 +67,8 @@ $timing: 3s;
   animation-duration: $timing;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
 }
 
 .bar.delay {
