--- a/src/App.scss
+++ b/src/App.scss
@@ -15,8 +15,7 @@
 
     .search-item-list-wrapper {
       margin-top: $spacer-3;
-      height: 32px;
-      height: 100%;
+      min-height: 32px;
       padding: 20px;
 
       .search-item {
@@ -45,15 +44,15 @@
       flex-direction: column;
       align-items: center;
       width: 100%;
-      height: 100%;
+      height: 100vh;
       margin-top: 20px;
       transition: .3s ease;
 
       .card-list {
-        max-height: 1100px;
-        min-height: 1100px;
+        flex: 1;
         justify-content: center;
         overflow-y: scroll;
+        overscroll-behavior: contain;
         margin-top: $spacer-3;
       }
     }
